@@ -1,3 +1,9 @@
+2003-06-06  Andrew Sobala  <aes@gnome.org>
+
+	* theme-method.c: fix from Rajkumar Sivasamy (originally for control-
+	center) for extracting themes under default solaris install. WE NEED
+	VFS SUPPORT FOR ARCHIVES! ;-)
+
 2003-06-03  Andrew Sobala  <aes@gnome.org>
 
 	* themus-properties-view.c: fix description word wrapping 
